# stacklab-v1

./: .prettierignore  LICENSE  README.md
backend/: .coverage  .env  .env.example  alembic.ini  pyproject.toml  pytest.ini  stacklab.db
backend/alembic/: env.py
backend/alembic/versions/: 2bfbd5808fcb_create_workspace_snapshots.py  45410af14e89_add_enterprise_workspace_models.py  6044976e7911_addactivitytable.py  64944b658265_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: activity.py  auth.py  router.py  workspace.py
backend/app/core/: config.py  database.py  events.py  security.py
backend/app/models/: __init__.py  activity.py  user.py  workspace.py
backend/app/schemas/: activity.py  token.py  user.py  workspace.py
backend/app/services/: activity.py  workspace.py  workspace_extension.py
backend/tests/: conftest.py  test_activity.py  test_auth.py  test_main.py  test_smoke.py  test_workspace.py
docs/: API.md  Architecture.md  Changelog.md  Deployment.md  DeveloperGuide.md  FolderStructure.md  Installation.md  PresentationGuide.md  ReleaseNotes.md  Testing.md  UserGuide.md
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
frontend/src/commands/: registry.ts
frontend/src/components/: Header.tsx  Sidebar.tsx
frontend/src/config/: api.ts  constants.ts  dashboard.ts  env.ts  icons.ts  labs.ts  layout.ts  navigation.ts  platform.ts
frontend/src/constants/: editor.ts  lab.ts  route.ts  shortcut.ts  (+1 more)
(+138 files in other folders)
