[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacklab-backend"
version = "1.0.0"
description = "StackLab API Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.0",
    "typing-extensions>=4.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
